--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -27,5 +27,6 @@ jobs:
         id: docker_build
         uses: docker/build-push-action@v2
         with:
+          context: ./golang
           push: false
           tags: gabrielgianelli/fullcycle-ci:latest
